# photonyx

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  dist-workspace.toml  pyproject.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
crates/photonyx/: Cargo.toml
crates/photonyx/src/: cli.rs  main.rs
crates/photonyx/src/commands/: mod.rs  siril_test.rs  stat.rs
crates/px/: Cargo.toml
crates/px-cli/: Cargo.toml  build.rs
crates/px-cli/src/: lib.rs  version.rs
crates/px-configuration/: Cargo.toml
crates/px-configuration/src/: lib.rs  lock.rs  profile.rs  project.rs
crates/px-conventions/: Cargo.toml
crates/px-conventions/src/: error.rs  lib.rs  observation.rs  profile.rs  project.rs
crates/px-fits/: Cargo.toml
crates/px-fits/src/: display.rs  lib.rs  meta.rs  model.rs
crates/px-fs/: Cargo.toml
crates/px-fs/src/: glob.rs  lib.rs  path.rs
crates/px-index/: Cargo.toml
crates/px-index/migrations/: 0001_initial_schema.sql  0002_observation_site_coords.sql
crates/px-index/src/: lib.rs
crates/px-nativeui/: Cargo.toml
crates/px-nativeui/src/: blink.rs  blink_iced.rs  lib.rs
crates/px-pipeline/: Cargo.toml
crates/px-pipeline/src/: calibrate_light.rs  calibrate_observation.rs  error.rs  lib.rs  master_bias.rs  master_dark.rs  master_flat.rs  master_light.rs  pause.rs
crates/px-pipeline/src/project/: grid_mosiac.rs  mod.rs  register.rs  sample.rs  spiral_mosiac.rs
crates/px-static/: Cargo.toml
crates/px-static/src/: env_vars.rs
crates/px-tui/: Cargo.toml
crates/px-tui/src/: app.rs  lib.rs  widgets.rs
crates/px-tui/src/tabs/: calibration.rs  mod.rs  observation.rs  profile.rs  project.rs
crates/px/src/: lib.rs  logging.rs  printer.rs  reporters.rs  resolve.rs  utils.rs
crates/px/src/commands/: inspect.rs  mod.rs  self_update.rs  siril_test.rs  stat.rs  tui.rs  version.rs
crates/px/src/commands/masters/: create_bias.rs  create_dark.rs  create_flat.rs  find_best.rs  list.rs  mod.rs
crates/px/src/commands/observation/: batch_calibrate.rs  calibrate.rs  list.rs  mod.rs  preview.rs
crates/px/src/commands/profile/: init.rs  list.rs  mod.rs  scan.rs  show.rs
crates/px/src/commands/project/: add.rs  align.rs  calibrate.rs  edit.rs  init.rs  list.rs  mod.rs  sample.rs  stack.rs  stats.rs  sync.rs
crates/siril-commands/: Cargo.toml
crates/siril-sys/: Cargo.toml
crates/siril-sys/src/: command.rs  conversion.rs  lib.rs  message.rs  output.rs  siril.rs  siril_ext.rs  types.rs
crates/siril-sys/src/commands/: asinh.rs  autoghs.rs  autostretch.rs  bgnoise.rs  binxy.rs  calibrate.rs  calibrate_single.rs  capabilities.rs  ccm.rs  cd.rs  close.rs  convert.rs  convertraw.rs  crop.rs  dumpheader.rs  exit.rs  extract_green.rs  extract_ha.rs  extract_haoiii.rs  get.rs  getref.rs  ght.rs  jsonmetadata.rs  limit.rs  linear_match.rs  link.rs  linstretch.rs  load.rs  log.rs  merge.rs  merge_cfa.rs  mirrorx.rs  mirrorx_single.rs  mirrory.rs  mod.rs  mtf.rs  neg.rs  nozero.rs  pcc.rs  platesolve.rs  (+51 more)
docs/: crate-dependencies.md  publish_release.md  test-cases.md
docs/adr/: 000-adr-template.md  001-siril-extensions-for-commands.md  002-siril-output-sink.md  003-core-data-model-terminology.md  004-profile-index-sqlite.md  005-project-init-interactive-cli.md
docs/designs/: cli_commands.md  directory_layout.md
src/photonyx/: main.py
src/photonyx/command/: version.py
src/photonyx/interface/: app.py  version.py
xtask/: .gitignore  Cargo.toml
xtask/src/: bump.rs  check.rs  codegen.rs  flags.rs  main.rs
