[workspace]
members = ["xtask/", "lib/*", "crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.91"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["photonyx team"]
repository = "https://github.com/KyleLeneau/photonyx"

[workspace.dependencies]
# local crates
siril-sys = { path = "./crates/siril-sys", version = "0.0.0" }
siril-commands = { path = "./crates/siril-commands", version = "0.0.0" }

# external crates
xshell = "0.2.7"
nix = { version = "0.29", features = ["fs"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

# String backed emums + macros
strum = "0.28"
strum_macros = "0.28"

[workspace.lints.rust]
# 

[workspace.lints.clippy]
# 
