[workspace]
members = ["xtask/", "lib/*", "crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.91"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["photonyx team"]
repository = "https://github.com/KyleLeneau/photonyx"

[workspace.dependencies]
# local crates
px-cli = { path = "./crates/px-cli", version = "0.1.3" }
px-configuration = { path = "./crates/px-configuration", version = "0.1.3" }
px-conventions = { path = "./crates/px-conventions", version = "0.1.3" }
px-fits = { path = "./crates/px-fits", version = "0.1.3" }
px-fs = { path = "./crates/px-fs", version = "0.1.3" }
px-pipeline = { path = "./crates/px-pipeline", version = "0.1.3" }
px-static = { path = "./crates/px-static", version = "0.1.3" }
siril-sys = { path = "./crates/siril-sys", version = "0.1.3" }

# external crates
xshell = "0.2.7"

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = { version = "4" }
dotenvy = "0.15"
owo-colors = { version = "4.1.0" }
indicatif = { version = "0.18.0" }
anstream = { version = "1.0.0" }
inquire = { version = "0.7" }

# Update for self-update
axoupdater = { version = "0.9.0", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
libc = "0.2"
regex = "1.12.3"
fs-err = { version = "3.2.2", features = ["tokio"] }
http = { version = "1.1.0" }
dunce = { version = "1.0.5" }
url = { version = "2.5.2", features = ["serde"] }


# Automatic builders
bon = "3.9"

# String backed emums + macros
strum = "0.28"
strum_macros = "0.28"

# Testing
insta = { version = "1.46.0", features = ["json", "filters", "redactions"] }

[workspace.lints.rust]
#

[workspace.lints.clippy]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
#
