[project]
name = "photonyx"
version = "0.1.0"
description = "Photonyx is a command-line tool for processing astronomical images."
readme = "README.md"
authors = [
    { name = "Kyle LeNeau" }
]
requires-python = ">=3.12"
dependencies = [
    "photonyx-cli",
]

[project.scripts]
px = "photonyx_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "packages/photonyx.engine",
    "packages/photonyx.cli",
    "packages/photonyx.common",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
extend-exclude = ["**/generated/*"]

[tool.uv.sources]
photonyx-cli = { workspace = true }
