[package]
name = "photonyx"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
siril-sys.workspace = true
tracing.workspace = true
tracing-subscriber.workspace=true

[lints]
workspace = true
