[package]
name = "px-cli"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
px-static = { workspace = true }

clap = { workspace = true, features = ["derive", "string"] }
clap_complete = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[build-dependencies]
px-static = { workspace = true }
fs-err = { workspace = true }

[features]
default = []
self-update = []

[lints]
workspace = true
