[package]
name = "px-configuration"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
px-fits = { workspace = true }

serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
