[package]
name = "px-configuration"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
