[package]
name = "px-conventions"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
px-configuration = { workspace = true }
px-fs = {workspace = true }

chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
