[package]
name = "px-fits"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
fitsrs = { version = "0.4.1" }
rayon = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
rustafits = { git = "https://github.com/eg013ra1n/rustafits", tag = "v1.0.0" }

[lints]
workspace = true
