[package]
name = "px-fs"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
dunce = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
