[package]
name = "px-fs"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
dunce = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
