[package]
name = "px-nativeui"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
px-fits = { workspace = true }

anyhow = { workspace = true }
eframe = "0.30"
egui-phosphor = "0.8"
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
