[package]
name = "px-pipeline"
version = "0.1.3"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
px-fits = { workspace = true}
px-fs = { workspace = true}
siril-sys = { workspace = true }

bon = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
