[package]
name = "px-tui"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
px-configuration = { workspace = true }
px-index = { workspace = true }

anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
