[package]
name = "px"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "px"

[dependencies]
px-cli.workspace = true
siril-sys.workspace = true

anstream.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
indicatif.workspace = true
owo-colors = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace=true

[lints]
workspace = true
