[package]
name = "px"
version = "0.1.2"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "px"

[dependencies]
px-cli = { workspace = true }
px-fs = { workspace = true }
siril-sys = { workspace = true }

anstream = { workspace = true }
anyhow = { workspace = true }
axoupdater = { workspace = true, features = [
    "github_releases",
    "tokio",
], optional = true }
clap = { workspace = true, features = ["derive", "string"] }
http = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
# Adds self-update functionality. This feature is only enabled for px's cargo-dist installer.
self-update = ["axoupdater", "px-cli/self-update"]

[lints]
workspace = true
