[package]
name = "siril-sys"
version = "0.0.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[lints]
workspace = true
