[package]
name = "siril-sys"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bon.workspace = true
libc.workspace = true
tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[lints]
workspace = true
